# Sparse-Sensor-Guided-Flow-Matching

./: .gitignore  README.md  S3FM_AI_IMPLEMENTATION_SPEC.md  S3FM_AI_IMPLEMENTATION_SPEC_中文.md  S3FM_CORE_SPEC.md  S3FM_EXECUTION_CHECKLIST.md  S3FM_START_HERE.md  S3FM_论文草稿.md  S3FM_项目总览.md
s3fm/: .gitignore  PAPER_EXPERIMENTS.md  README.md  SERVER_RUN.md  pyproject.toml  requirements.txt
s3fm/configs/: kse_flow_prior.yaml  kse_flow_prior_info.yaml  kse_score_prior.yaml  kse_source_inference.yaml  paper_kse_flow_prior.yaml  paper_kse_flow_prior_info.yaml  paper_kse_score_prior.yaml  paper_kse_source_inference.yaml
s3fm/results/: m4b_learned_64_lam2_multimask_summary.md  s3gm_pf_ode_baseline_smoke_summary.md  s3gm_pf_ode_lambda_sweep_summary.md  s3gm_pf_ode_val_tuned_summary.md
s3fm/results/kse_prior/: README.md  metrics.jsonl
s3fm/results/m3/: README.md
s3fm/results/m4/: README.md
s3fm/results/m4b/: README.md  gate.json  resolved_args.json  rows.csv  summary.csv
s3fm/results/m4b_lambda10/: README.md  gate.json  resolved_args.json  rows.csv  summary.csv
s3fm/results/m4b_learned/: README.md  (+3 more)
s3fm/s3fm/: config.py  logging_utils.py  reproducibility.py  run_server_suite.py  smoke.py  train_flow.py  train_score.py  train_source_inference.py
s3fm/scripts/: run_paper_suite.sh  run_server_suite.sh  train_paper_models.sh
s3fm/tests/: test_data_pipeline.py  test_diffusion_vp.py  test_flow_path.py  test_flow_training.py  test_guidance.py  test_reproducibility.py  test_solvers_sampling.py  test_source_constructor.py  test_source_inference.py  test_sources.py
(+204 files in other folders)
